# ZPGProject

./: .gitignore  CMakeLists.txt  JAN0840.txt  README.md  main.cpp
include/: Camera.h  Engine.h  Enums.h  Light.h  Model.h  Mouse.h  Movement.h  Object.h  Observer.h  Scene.h  Shader.h  ShaderManager.h  Skybox.h  Texture.h  TransComponent.h  TransComposite.h  TransRotate.h  TransScale.h  TransTranslate.h
resources/Models/Plane/: untitled.mtl
resources/Models/Terrain/: teren.mtl
resources/Shaders/: Blinn.frag  Constant.frag  Lambert.frag  Phong.frag  Phong2.frag  Skybox.frag  Skybox.vert  Vertex.vert
source/: Camera.cpp  Engine.cpp  Light.cpp  Model.cpp  Mouse.cpp  Movement.cpp  Object.cpp  Observer.cpp  Scene.cpp  Shader.cpp  ShaderManager.cpp  Skybox.cpp  Texture.cpp  TransComposite.cpp  TransRotate.cpp  TransScale.cpp  TransTranslate.cpp
